# pw-meter

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  defconfig.bak  sdkconfig
main/: Button.cpp  Button.h  CMakeLists.txt  CPULoadMeter.cpp  CPULoadMeter.h  Compute.cpp  Compute.h  ComputeTask.cpp  ConsoleInput.cpp  ConsoleInput.h  DCBlocker.h  Display.cpp  DisplayTask.cpp  Filters.h  Indicator.cpp  Indicator.h  Input.cpp  Input.h  Interface.cpp  Interface.h  Kconfig.env_caps  Kconfig.projbuild  LED.cpp  LED.h  PowerMeterApp.cpp  PowerMeterApp.h  Reader.cpp  Reader.h  RingBuffer.h  RotaryEncoder.cpp  RotaryEncoder.h  SettingsManager.cpp  SettingsManager.h  Telemetry.cpp  Telemetry.h  app_main.cpp  common.h  idf_component.yml  mqtt_creds.h  pin_creds.h  (+1 more)
pcb/: fabrication-toolkit-options.json  fp-lib-table  pcb.kicad_pcb  pcb.kicad_pro  pcb.kicad_sch  sym-lib-table  symbols.kicad_sym
pcb/bom/: ibom.html
pcb/footprints.pretty/: LC_Tech_HW697_Module.kicad_mod  LC_Tech_ZMPT101B_LM358_Sensor.kicad_mod  L_SXN-SDRH5D28.kicad_mod  MODULE_GM009605v4.3.kicad_mod
pcb/jlcpcb/: project.db
resources/: SplashScreen_PowerMeter_128x64.h
